# metal-git

./: .gitignore  .project  Cargo.toml  LICENSE  README.md  build.rs
src/: commit_diff_panel.rs  commit_diff_util.rs  commit_window.rs  diff_text_view_util.rs  gobject_utils.rs  gtk_utils.rs  history_window.rs  main.rs  railway.rs  repository_ext.rs  repository_manager.rs  static_resource.rs  station_cell_renderer.rs  station_renderer.rs  station_wrapper.rs  window_manager.rs
src/resources/: commit_window.ui  history_window.ui  resources.gresource  resources.xml
tests/: railway_test.rs  repository_manager_test.rs
tests/util/: mod.rs  test_repo.rs
