[package]
name = "metal-git"
version = "0.0.1"
authors = ["Yoichi Imai <sunnyone41@gmail.com>"]
build = "build.rs"
edition = "2021"

[lib]
name = "metal_git"
path = "src/main.rs"

[dependencies]
git2 = "^0.18"
gtk = { version = "^0.18.1" }
glib = { version = "^0.19" }
chrono = "*"

[dev-dependencies]
tempdir = "0.3"

